hack to fix firefox wrapping logo - but now shrink window breaks

--- a/appengine/static/src/css/appbar.css
+++ b/appengine/static/src/css/appbar.css
@@ -12,7 +12,7 @@
     height: 35px;
     position: relative;
     z-index: 999;
-    white-space: nowrap;
+    x-white-space: nowrap;
 }
 
 div.pfLeft {
